language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_on_pipe_with_invalid_step_8.snap
---
source: language-server/src/tests/hover.rs
expression: "\npub fn main() {\n  [1, 2, 3]\n  |> wibble\n  |> filter(fn(value) { value })\n}\n\nfn filter(list: List(a), fun: fn(a) -> Bool) -> List(a) { todo }\n"
---

pub fn main() {
  [1, 2, 3]
  |> wibble
  |> filter(fn(value) { value })
            ↑▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔ 
}

fn filter(list: List(a), fun: fn(a) -> Bool) -> List(a) { todo }


----- Hover content (markdown) -----
```gleam
fn(Bool) -> Bool
```
