language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_on_record_being_updated_shows_ignored_fields.snap
---
source: language-server/src/tests/hover.rs
expression: "\ntype Wibble {\n  Wibble(a: Int, b: Bool)\n}\n\npub fn go(wibble: Wibble) {\n    Wibble(..wibble, a: 1)\n}\n"
---

type Wibble {
  Wibble(a: Int, b: Bool)
}

pub fn go(wibble: Wibble) {
    Wibble(..wibble, a: 1)
             ▔▔▔▔▔↑       
}


----- Hover content (markdown) -----
```gleam
Wibble
```
A locally defined variable.

Unchanged record fields:
- `b: Bool`
