language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_over_block_in_list_spread.snap
---
source: language-server/src/tests/hover.rs
expression: "\npub fn main() {\n  [1, 2, ..{\n    let x = 1\n    [x]\n  }]\n}\n"
---

pub fn main() {
  [1, 2, ..{
    let x = 1
        ↑    
    [x]
  }]
}


----- Hover content (markdown) -----
```gleam
Int
```
