language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_over_module_name.snap
---
source: language-server/src/tests/hover.rs
expression: "\nimport wibble\n\npub fn main() {\n  wibble.wibble()\n}\n"
---

import wibble

pub fn main() {
  wibble.wibble()
  ↑▔▔▔▔▔         
}


----- Hover content (markdown) -----
```gleam
wibble
```
 This is the wibble module.
 Here is some documentation about it.
 This module does stuff

View on [HexDocs](https://hex.hexdocs.pm/wibble.html)
