language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_over_module_name_in_annotation.snap
---
source: language-server/src/tests/hover.rs
expression: "\nimport wibble\n\npub fn main(w: wibble.Wibble) {\n  todo\n}\n"
---

import wibble

pub fn main(w: wibble.Wibble) {
               ↑▔▔▔▔▔          
  todo
}


----- Hover content (markdown) -----
```gleam
wibble
```
 This is the wibble module.
 Here is some documentation about it.
 This module does stuff

View on [HexDocs](https://hex.hexdocs.pm/wibble.html)
