language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_over_module_with_path.snap
---
source: language-server/src/tests/hover.rs
expression: "\nimport wibble/wobble\n\npub fn main() {\n  wobble.wibble()\n}\n"
---

import wibble/wobble

pub fn main() {
  wobble.wibble()
  ↑▔▔▔▔▔         
}


----- Hover content (markdown) -----
```gleam
wibble/wobble
```
 The module documentation

View on [HexDocs](https://hex.hexdocs.pm/wibble/wobble.html)
