language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_prelude_type.snap
---
source: language-server/src/tests/hover.rs
expression: "\nconst number = 100\n"
---

const number = 100
▔▔▔▔▔▔▔▔▔↑▔▔      


----- Hover content (markdown) -----
```gleam
Int
```
