language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_print_alias_when_parameters_match.snap
---
source: language-server/src/tests/hover.rs
expression: "\ntype MyResult(a, b) = Result(a, b)\n\nfn do_thing() -> MyResult(Int, Int) {\n  Error(1)\n}\n"
---
type MyResult(a, b) = Result(a, b)

fn do_thing() -> MyResult(Int, Int) {
▔▔▔↑▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔  
  Error(1)
}


----- Hover content (markdown) -----
```gleam
fn() -> Result(Int, Int)
```
